<resources>
    <string name="app_name">Java Code</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learn">Learn</string>
    <string name="quiz">quiz</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="image">image</string>
    <string name="share_dec">Share JAVA CODE App With Your Friends</string>
    <string name="contact_us">contact us</string>
    <string name="app_description">This App Is For Students Who Wants To Get Started With JAVA And Wants To Improve Their Skills.</string>
    <string name="developer_contact">Developer Contact</string>
    <string name="pratik_softwares">PRATIK SOFTWARES</string>
    <string name="website">pratik-softwares.business.site</string>
    <string name="email">codes.pratik@gmail.com</string>
    <string name="hello_coders">Hello Coders,</string>
    <string name="topics">Topics</string>
    <string name="programs">Programs</string>
    <string name="pratiksoftwares">{ PRATIK SOFTWARES }</string>
    <string name="history">History</string>
    <string name="features">Features</string>
    <string name="jvm">JVM</string>
    <string name="introduction">Introduction</string>
    <string name="_1_simple">1. Simple:</string>
    <string name="object_oriented">2. Object Oriented:</string>
    <string name="_3_robust">3. Robust:</string>
    <string name="_4_platform_independent">4. Platform Independent:</string>
    <string name="_5_secure">5. Secure:</string>
    <string name="_6_multi_threading">6. Multi Threading:</string>
    <string name="java_virtual_machine">Java Virtual Machine</string>
    <string name="jvm_architecture">JVM Architecture</string>
    <string name="class_loader">1.Class Loader:</string>
    <string name="method_area">2.Method Area:</string>
    <string name="heap">3.Heap:</string>
    <string name="stack">4.Stack:</string>
    <string name="program_register">5.Program Register:</string>
    <string name="native_method_stack">6.Native Method Stack:</string>
    <string name="executive_engine">7.Executive Engine:</string>
    <string name="native_method_interface">8.Native Method Interface:</string>
    <string name="native_method_libraries">9.Native Method Libraries:</string>
    <string name="setup">Setup</string>
    <string name="claass">1.class:</string>
    <string name="publicc">2.public:</string>
    <string name="staticc">3.static:</string>
    <string name="voidd">4.void:</string>
    <string name="mainn">5.main:</string>
    <string name="string_args">6.String[] args:</string>
    <string name="system_out_println">7.System.out.println:</string>
    <string name="step1">Step1:</string>
    <string name="step2">Step2:</string>
    <string name="step3">Step3:</string>
    <string name="step4">Step4:</string>
    <string name="step5">Step5:</string>
    <string name="step6">Step6:</string>
    <string name="data_types_in_java">Data Types In Java</string>
    <string name="arrays_in_java">Arrays In Java</string>
    <string name="cmd">cmd</string>
    <string name="buffered">Buffered</string>
    <string name="scanner">Scanner</string>
    <string name="command_line_arguments">Command Line Arguments</string>
    <string name="buffered_reader">Buffered Reader</string>

    <string name="do_while">do-while</string>
    <string name="While">while</string>
    <string name="For">for</string>
    <string name="object">Object</string>
    <string name="wrapper">Wrapper</string>
    <string name="classes">Classes</string>
    <string name="wrapper_classes">Wrapper Classes</string>
    <string name="start_quiz">Start Quiz</string>

</resources>