<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.JvmFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="@string/java_virtual_machine"
                android:textColor="@color/master"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:text="\t\t\t\t\t\tJava virtual Machine(JVM) is a virtual Machine that provides runtime environment to execute java byte code. The JVM doesn't understand Java typo, that's why you compile your &quot;.java&quot; files to obtain &quot;*.class&quot; files that contain the bytecodes understandable by the JVM.  \n\t\t\t\t\t\tJVM control execution of every Java program. It enables features such as automated exception handling, Garbage-collected heap."
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/jvm_architecture"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="332dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/image"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:src="@drawable/jvmarch" />

            <TextView
                android:id="@+id/cloader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/class_loader"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:text="\t\t\t\t\tClass loader loads the Class for execution"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cloader2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/method_area"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:text="\t\t\t\t\tStores pre-class structure as constant pool."
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cloader3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/heap"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:text="\t\t\t\t\t Heap is a memory area in which objects are allocated."
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cloader4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/stack"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="\t\t\t\t\tLocal variables and partial results are store here. Each thread has a private JVM stack created when the thread is created."
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cloader5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/program_register"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:text="\t\t\t\t\t Program register holds the address of JVM instruction currently being executed."
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cloader6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/native_method_stack"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:text="\t\t\t\t\tIt contains all native used in application."
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cloader7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/executive_engine"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:text="\t\t\t\t\tExecution engine controls the execute of instructions contained in the methods of the classes."
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cloader8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/native_method_interface"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:text="\t\t\t\t\t\t\tNative method interface gives an interface between java code and native code during execution."
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cloader9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/native_method_libraries"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:text="\t\t\t\t\t\t\t\t\t\t\t\tNative Libraries consist of files required for the execution of native code."
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>