<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LearnFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/hello_coders"
                android:textColor="#ED1C24"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/topics"
                android:textColor="#000000"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listTopics"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                tools:listitem="@layout/design_topics">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/programs"
                android:textColor="#000000"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listPrograms"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="5dp"
                tools:listitem="@layout/design_topics" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>